# Shared_Memory_Monitor

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
deploy/: README.md
deploy/logrotate/: shared-memory-audit.example
deploy/systemd/user/: shared-memory-monitor.service
docs/: GATEWAY_AUDIT_HANDOFF.md  GITHUB.md  SISTER_PROJECT.md
docs/archive/: README.md  research_github_projects.html
graphs/: bar-meta.js
scripts/: agent-status.sh  agent-upgrade.sh  capture-screenshots.sh  capture_screenshots.py  check-env.sh  install-systemd-user.sh  install.sh  pre-publish-check.sh  publish.sh  run-loop.sh  serve.sh
src/sm_telemetry_monitor/: __init__.py  analytics.py  backup_reader.py  breakdown.py  bridge.py  charts.py  cli.py  collector.py  config.py  consolidation.py  dashboard.py  doctor.py  env_loader.py  latency.py  logs_reader.py  nrem_backlog.py  outbox.py  pipeline_chart.py  sanitize.py  server.py  store.py  summary.py  system_health.py
static/: dashboard.html  diagram.html  logs.html  theme.css
tests/: test_backup_reader.py  test_breakdown.py  test_consolidation.py  test_doctor.py  test_latency.py  test_logs_reader.py  test_nrem_backlog.py  test_security.py  test_system_health.py
