[project]
name = "sm-telemetry-monitor"
version = "0.1.0"
description = "Shared Memory Monitor — live dashboard for REM/NREM backlog, outbox health, and gateway status"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
]

[project.scripts]
sm-telemetry = "sm_telemetry_monitor.cli:main"

[tool.hatch.build.targets.wheel.force-include]
"static" = "static"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sm_telemetry_monitor"]

[tool.uv]
package = true