[project]
name = "sm-telemetry-monitor"
version = "0.5.2"
description = "Read-only view over Shared Memory gateway telemetry and framework logs — no separate data interfaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["shared-memory", "telemetry", "monitoring", "rem", "nrem", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "httpx>=0.27",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/KanenasInGreece/Shared_Memory_Monitor"
Documentation = "https://github.com/KanenasInGreece/Shared_Memory_Monitor#readme"
Repository = "https://github.com/KanenasInGreece/Shared_Memory_Monitor"
Issues = "https://github.com/KanenasInGreece/Shared_Memory_Monitor/issues"

[project.scripts]
sm-telemetry = "sm_telemetry_monitor.cli:main"

[tool.hatch.build.targets.wheel.force-include]
"static" = "static"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sm_telemetry_monitor"]

[tool.uv]
package = true